--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "start": "node dist/index.js",
         "demo": "npx tsc examples/demo.ts && node examples/demo.js",
         "dev": "ts-node examples/demo.ts",
-        "test": "ts-node test/color-helper.test.ts"
+        "test": "jest"
     },
     "files": ["dist"],
     "keywords": [
@@ -32,6 +32,9 @@
     },
     "devDependencies": {
         "@types/uuid": "^10.0.0",
+        "@types/jest": "^29.5.0",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
         "tslint": "^6.1.3",
         "typescript": "^5.3.0"
