--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tplink-bulbs",
-    "version": "1.1.0",
+    "version": "1.1.2",
     "description": "TypeScript library to control TP-Link Tapo devices via cloud and local network.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -11,7 +11,8 @@
         "demo": "npx tsc examples/demo.ts && node examples/demo.js",
         "dev": "ts-node examples/demo.ts",
         "test": "jest",
-        "coverage": "jest --coverage"
+        "coverage": "jest --coverage",
+        "publish": "tsc && npm publish"
     },
     "files": ["dist"],
     "keywords": [
