--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "coverage": "jest --coverage",
         "publish": "tsc && npm publish"
     },
-    "files": ["dist"],
+    "files": [
+        "dist"
+    ],
     "keywords": [
         "tplink",
         "tapo",
@@ -33,8 +35,8 @@
         "uuid": "^9.0.0"
     },
     "devDependencies": {
+        "@types/jest": "^29.5.14",
         "@types/uuid": "^10.0.0",
-        "@types/jest": "^29.5.0",
         "jest": "^29.7.0",
         "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
