--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "scripts": {
         "build": "tsc",
         "start": "node dist/index.js",
-        "demo": "npx tsc examples/demo.ts && node examples/demo.js",
-        "dev": "ts-node examples/demo.ts",
+        "demo": "ts-node examples/manual.ts",
         "manual": "ts-node examples/manual.ts",
         "test": "jest",
         "coverage": "jest --coverage",
@@ -38,11 +37,11 @@
     "devDependencies": {
         "@types/jest": "^29.5.14",
         "@types/uuid": "^10.0.0",
+        "dotenv": "^16.5.0",
         "jest": "^29.7.0",
         "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
         "tslint": "^6.1.3",
-        "typescript": "^5.3.0",
-        "dotenv": "^16.3.1"
+        "typescript": "^5.3.0"
     }
 }
